change color of go up button to blue

--- a/WPIMajorTracking/secured/majorsheet.html
+++ b/WPIMajorTracking/secured/majorsheet.html
@@ -510,7 +510,7 @@
 
 	<div class="btn-center">
 		<a href="#top" id="btn-go-up">
-			<button class="btn-margin btn btn-success">
+			<button class="btn-margin btn btn-info">
 				<span class="glyphicon glyphicon-circle-arrow-up" aria-hidden="true"></span>
 			</button>
 		</a>
